--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/FlightData
+spring.datasource.url=jdbc:mysql://localhost:3306/team509
 spring.datasource.username=root
-spring.datasource.password=ReplaceWithYourLocalMySqlPassword
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=8080
+server.port=8082
 
 # JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
