--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,10 +49,10 @@ jobs:
       #     service_account: "my-service-account@my-project.iam.gserviceaccount.com"
 
       # Alternative option - authentication via credentials json
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v0'
+      - id: "auth"
+        uses: "google-github-actions/auth@v2.1.2"
         with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
 
       - name: Docker configuration
         run: |-
