printing the token

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,6 +54,12 @@ jobs:
         with:
           credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
 
+      - name: Print access token for debugging
+        run: |-
+          echo "Access Token: ${{ steps.auth.outputs.access_token }}"
+        env:
+          ACCESS_TOKEN: ${{ steps.auth.outputs.access_token }}
+
       - name: Docker configuration
         run: |-
           echo ${{steps.auth.outputs.access_token}} | docker login -u oauth2accesstoken --password-stdin https://$GAR_LOCATION-docker.pkg.dev
