--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,6 +53,7 @@ jobs:
         uses: "google-github-actions/auth@v2.1.2"
         with:
           credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
+          token_format: "access_token"
 
       - name: Print access token for debugging
         run: |-
