--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ env:
   GAR_LOCATION: us-central1 # TODO: update region of the Artifact Registry
   GKE_CLUSTER: cs509cluster # TODO: update to cluster name
   GKE_ZONE: us-central1-a # TODO: update to cluster zone
-  DEPLOYMENT_NAME: gke-deployment # TODO: update to deployment name
+  DEPLOYMENT_NAME: backend-app # TODO: update to deployment name
   REPOSITORY: samples # TODO: update to Artifact Registry docker repository
   IMAGE: static-site
 
