--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,6 +19,9 @@ spec:
           image: us-central1-docker.pkg.dev/cs509team5/samples/static-site:latest
           ports:
             - containerPort: 8080 # Default Spring Boot port
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: "prod"
           resources:
             limits:
               cpu: "1"
@@ -38,3 +41,22 @@ spec:
               port: 8080
             initialDelaySeconds: 20
             periodSeconds: 5
+        - name: cloudsql-proxy
+          image: gcr.io/cloudsql-docker/gce-proxy:1.16
+          command:
+            [
+              "/cloud_sql_proxy",
+              "-instances=cs509team5:us-central1:team509=tcp:3306",
+              "-credential_file=/secrets/cloudsql/credentials.json",
+            ]
+          volumeMounts:
+            - name: cloudsql-instance-credentials
+              mountPath: /secrets/cloudsql
+              readOnly: true
+          ports:
+            - containerPort: 3306
+
+      volumes:
+        - name: cloudsql-instance-credentials
+          secret:
+            secretName: cloudsql-instance-credentials
