--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/team509
+# Production database connection properties
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/team509
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=password
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8080
 
