--- a/service.yaml
+++ b/service.yaml
@@ -9,6 +9,6 @@ spec:
   ports:
     - port: 80
       targetPort: 8080
-      protocol: TCP
+      protocol: http
   selector:
     app: backend-app
