--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/team509
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/FlightData
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Team1centaurbRak#me
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8080
 
